--- a/Salama Fair Qt/form files/DataEntryWidget.ui
+++ b/Salama Fair Qt/form files/DataEntryWidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>595</width>
+    <width>749</width>
     <height>460</height>
    </rect>
   </property>
@@ -14,11 +14,15 @@
    <string>صفحة ادخال البيانات</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="3">
-    <widget class="QLineEdit" name="productNameLineEdit"/>
-   </item>
    <item row="1" column="5">
-    <widget class="QLineEdit" name="IDLineEdit"/>
+    <widget class="QLineEdit" name="IDLineEdit">
+     <property name="minimumSize">
+      <size>
+       <width>100</width>
+       <height>0</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item row="3" column="1" colspan="2">
     <widget class="QPushButton" name="exitButton">
@@ -73,7 +77,7 @@
       </size>
      </property>
      <property name="text">
-      <string>الرقم المسلسل</string>
+      <string>الكود</string>
      </property>
     </widget>
    </item>
@@ -101,6 +105,16 @@
     <widget class="QLabel" name="label_4">
      <property name="text">
       <string>السعر بالجنية</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="3">
+    <widget class="QTextEdit" name="productNameLineEdit">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>50</height>
+      </size>
      </property>
     </widget>
    </item>
