--- a/Salama Fair Qt/form files/DataEntryDialog.ui
+++ b/Salama Fair Qt/form files/DataEntryDialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DataEntryWidget</class>
- <widget class="QWidget" name="DataEntryWidget">
+ <class>DataEntryDialog</class>
+ <widget class="QDialog" name="DataEntryDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -119,7 +119,50 @@
     </widget>
    </item>
   </layout>
+  <action name="actionEnter">
+   <property name="text">
+    <string>enter</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="text">
+    <string>exit</string>
+   </property>
+  </action>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>enterButton</sender>
+   <signal>clicked()</signal>
+   <receiver>actionEnter</receiver>
+   <slot>trigger()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>139</x>
+     <y>354</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>exitButton</sender>
+   <signal>clicked()</signal>
+   <receiver>actionExit</receiver>
+   <slot>trigger()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>46</x>
+     <y>354</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
