--- a/Salama Fair Qt/form files/DataEntryDialog.ui
+++ b/Salama Fair Qt/form files/DataEntryDialog.ui
@@ -25,7 +25,7 @@
     </widget>
    </item>
    <item row="3" column="1" colspan="2">
-    <widget class="QPushButton" name="exitButton">
+    <widget class="QPushButton" name="backButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
@@ -39,7 +39,7 @@
       </size>
      </property>
      <property name="text">
-      <string>الخروج</string>
+      <string>الرجوع</string>
      </property>
     </widget>
    </item>
@@ -124,9 +124,9 @@
     <string>enter</string>
    </property>
   </action>
-  <action name="actionExit">
+  <action name="actionBack">
    <property name="text">
-    <string>exit</string>
+    <string>back</string>
    </property>
   </action>
  </widget>
@@ -149,9 +149,9 @@
    </hints>
   </connection>
   <connection>
-   <sender>exitButton</sender>
+   <sender>backButton</sender>
    <signal>clicked()</signal>
-   <receiver>actionExit</receiver>
+   <receiver>actionBack</receiver>
    <slot>trigger()</slot>
    <hints>
     <hint type="sourcelabel">
